[package]
name = "focus-board"
version = "1.0.0"
description = "A tiny always-on-top streaming checklist."
authors = ["Focus Board"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "focus_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
thiserror = "1.0"
