[package]
name = "goals-app"
version = "0.8.10"
description = "A beautiful goals tracking app."
authors = ["Yogabayusavira"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "goals_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
thiserror = "1.0"
